--- a/lms/static/sass/discussion/_discussion.scss
+++ b/lms/static/sass/discussion/_discussion.scss
@@ -444,7 +444,7 @@ section.discussion-pagination {
   .response-display-count {
     display: block;
     padding: ($baseline/2) 0;
-    color: $gray-d2;
+    color: $forum-color-response-count;
     font-size: $forum-base-font-size;
   }
 
