--- a/lms/static/sass/discussion/utilities/_variables-v1.scss
+++ b/lms/static/sass/discussion/utilities/_variables-v1.scss
@@ -19,6 +19,8 @@ $forum-color-hover-thread: #f6f6f6 !default;
 $forum-color-reading-thread: $gray-d3 !default;
 $forum-color-read-post: $blue !default;
 $forum-color-never-read-post: $gray-d3 !default;
+$forum-color-editor-preview-label: $gray-d2 !default;
+$forum-color-response-count: $gray-d2 !default;
 
 // post images
 $post-image-dimension: ($baseline*3) !default;  // image size  + margin
